# script-gen

./: .env.example  CLAUDE.md  batch-ads-system-prompt.md  coach-randy-300-ad-scripts.md  doll-factory-ai-300-ads-teleprompter.md  pyproject.toml  requirements.txt  sample_intake.json  test_generate_response.json  test_output.json  test_output.md
.claude/commands/: commit.md
app/: config.py  email_delivery.py  formatter.py  generator.py  jobs.py  main.py  pipeline.py  prompts.py  reliability.py  schemas.py
samples/: contractor.json  interior_designer.json  mortgage_broker.json  property_manager.json  realtor.json  roofer.json
samples/outputs/: contractor.json  mortgage_broker.json  property_manager.json
scripts/: test_generate.sh
tests/: conftest.py  test_formatter.py  test_generator.py  test_main.py  test_pipeline.py  test_reliability.py  test_schemas.py
